[aliases]
test=pytest

[metadata]
author = PANOPTES Team
author_email = info@projectpanoptes.org
description = Network for linking PANOPTES Observatories together
edit_on_github = True
github_project = panoptes/panoptes-network/PONG
keywords = Citizen-science gce google open-source exoplanet digital dslr camera
license = MIT
long_description = PONG: PANOPTES Observatory Network via Google
package_name = pong
url = http://panoptes.github.io
